<resources>
  <string name="app_name">Netizen Trades</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="logo">Logo</string>
  <string name="login">Login</string>
  <string name="copy">Copy</string>
  <string name="wallet">wallet</string>
  <string name="description_deposit">Doge wallet deposit for trade</string>
  <string name="balance">Balance</string>
  <string name="start_balance">Start Balance:</string>
  <string name="finish_balance">Finish Balance:</string>
  <string name="win_lose">Win/Lose:</string>
  <string name="withdraw_all">Withdraw All</string>
  <string name="claim">Claim</string>
  <string name="belum_di_clam">Belum Di Clam</string>
  <string name="botFibonacci">Bot A</string>
  <string name="botProbability">Bot B</string>
  <string name="target_balance">Target Balance</string>
  <string name="stop">Stop</string>
  <string name="current_balance">Current Balance</string>
  <string name="attention">Attention :</string>
  <string name="description_attention">Netizen Trading Robots can make 3% profit and 1% commission for your sponsors, who will enter your doge wallet without the need to withdraw funds. Within 1 day only allowed to trade 1 time. If the robot fails to make profit, it will make a cut loss and the total loss from the cut loss robot will be replaced by a ticket for charity. Please do not turn off the cellphone when the robot is running. And keep the internet connection stable. Good luck.</string>
  <string name="result">Result</string>
  <string name="risk">Risk</string>
  <string name="please_wait">Please wait</string>
  <string name="bot_web">Bot C</string>
  <string name="minimum">Minimum : 10000.00000000 DOGE</string>
</resources>
