<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.BotActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:id="@+id/imageView"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:elevation="10dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/textPrimary"
            android:gravity="center"
            android:text="@string/balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/textViewBalance"/>

        <TextView
            android:textColor="@color/textPrimary"
            android:gravity="center"
            android:text="@string/target_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/textViewTargetBalance"/>

      </LinearLayout>

      <TextView
          android:textColor="@color/textPrimary"
          android:gravity="center"
          android:text="@string/current_balance"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewCurrentBalance"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Button
          android:background="@drawable/button_danger"
          android:textColor="@color/textSecondary"
          android:text="@string/stop"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/buttonStop"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <com.anychart.AnyChartView
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

  </LinearLayout>

</ScrollView>