<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        android:minHeight="300dp"
        android:scaleType="fitCenter"
        android:elevation="10dp"
        android:contentDescription="@string/logo"/>

    <LinearLayout
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:padding="15dp"
        android:background="@drawable/card_primary"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textEmailAddress"
          android:textColor="@color/colorPrimary"
          android:textColorHint="@color/colorPrimaryDark"
          android:backgroundTint="@color/colorPrimaryLight"
          android:hint="@string/email"
          android:ems="10"
          android:id="@+id/editTextEmail"
          tools:ignore="Autofill"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="20dp"/>

      <EditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:textColor="@color/colorPrimary"
          android:textColorHint="@color/colorPrimaryDark"
          android:backgroundTint="@color/colorPrimaryLight"
          android:hint="@string/password"
          android:ems="10"
          android:id="@+id/editTextPassword"
          tools:ignore="Autofill,LabelFor"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <Button
          android:text="@string/login"
          android:background="@drawable/button_success"
          android:textColor="@color/textSecondary"
          android:layout_width="150dp"
          android:layout_height="wrap_content"
          android:elevation="10dp"
          android:id="@+id/buttonLogin"/>


    </LinearLayout>

  </LinearLayout>

</ScrollView>