<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ResultActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <LinearLayout
        android:background="@drawable/card_primary"
        android:elevation="10dp"
        android:layout_margin="20dp"
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/result"
          android:textSize="16sp"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

      <View
          android:id="@+id/divider"
          android:layout_width="match_parent"
          android:layout_height="1dp"
          android:background="@color/colorPrimary"/>

      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:id="@+id/statusTextView"
            android:layout_margin="5dp"
            android:text="@string/win_lose"
            android:textSize="25sp"
            android:gravity="center"
            android:textColor="@color/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <LinearLayout
          android:background="@drawable/card_primary"
          android:layout_marginTop="5dp"
          android:layout_marginStart="10dp"
          android:layout_marginEnd="10dp"
          android:layout_marginBottom="10dp"
          android:padding="15dp"
          android:elevation="5dp"
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:id="@+id/walletDescriptionTextView"
            android:gravity="start"
            android:hint="@string/description_deposit"
            android:text="@string/description_attention"
            android:textColor="@color/textPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

      </LinearLayout>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

    </LinearLayout>

  </LinearLayout>

</ScrollView>