<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity">

  <LinearLayout
      android:orientation="vertical"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@mipmap/ic_launcher_round"
        android:id="@+id/imageView"
        android:elevation="20dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/logo"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:elevation="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/description_deposit"
          android:gravity="center"
          android:textColor="@color/colorPrimary"
          android:textSize="15sp"
          android:textStyle="bold"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textView"/>

      <Space
          android:layout_width="match_parent"
          android:layout_height="10dp"/>

      <LinearLayout
          android:gravity="center"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/textPrimary"
            android:hint="@string/wallet"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewWallet"
            android:layout_weight="1"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="wrap_content"/>

        <Button
            android:background="@drawable/button_info"
            android:textColor="@color/textSecondary"
            android:text="@string/copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCopy"
            android:layout_weight="0.1"/>

      </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:id="@+id/linearLayoutRefreshBalance"
        android:background="@drawable/card_primary"
        android:layout_marginTop="5dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:text="@string/balance"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:id="@+id/textViewBalance"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <LinearLayout
        android:background="@drawable/card_primary"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:elevation="5dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <TextView
          android:hint="@string/description_deposit"
          android:gravity="center"
          android:textColor="@color/textPrimary"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <Button
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:background="@drawable/button_danger"
        android:textColor="@color/textSecondary"
        android:text="@string/bot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonBotMode"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

  </LinearLayout>

</ScrollView>